methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:4: error: not found: value forwar
    forwar(2)
    ^