methods.picture.PatternPicture.scala.code
override def run() {
  for(a <- 1 to 4) {
    round(Color.RED)
  	forwar(2)
  	left()
    round(Color.YELLOW)
  	forward()
 	  forward()
  	round(Color.GREEN)
  }
}  
  
  
  
def round(c:Color) {
  setBrushColor(c)
  forward()
  brushDown
  brushUp
  left()
  forward()
  left()
  forward()
  brushDown()
  brushUp()
  left()
  forward()
  left()
}